# ToDoApp_Semester2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  erd.dbml  erd.drawio  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  python.instructions.md
data/: dao.py  database.py
docs/: Changelog.md  Roadmap.md  Status.md
domain/: models.py
prompts/archive/000-bootstrap-project-scaffold/: ARCHIVE.md  changes.json  prompt.md
prompts/templates/: ARCHIVE.md  changes.json.example
services/: task_service.py
src/student_task_manager/: __init__.py  app.py
tests/: test_smoke.py
