[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-task-manager"
version = "0.1.0"
description = "Browser-based student task manager for the Advanced Programming course."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "C:/Users/lence/AppData/Local/ToDoApp_Semester2/pytest_cache"

[tool.ruff]
line-length = 100
target-version = "py311"
cache-dir = "C:/Users/lence/AppData/Local/ToDoApp_Semester2/ruff_cache"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
strict = false
cache_dir = "C:/Users/lence/AppData/Local/ToDoApp_Semester2/mypy_cache"
